# battery-practice

./: CMakeLists.txt
include/: battery_module.h  console.h  em_controller.h  grid.h  house.h  inverter.h  menu.h  photovoltaic_panel.h  storage.h
src/: main.cpp
src/models/: battery_module.cpp  em_controller.cpp  grid.cpp  house.cpp  inverter.cpp  photovoltaic_panel.cpp  storage.cpp
src/services/: console.cpp  menu.cpp
test/: CMakeLists.txt  battery_module_test.cpp  console_test.cpp  em_controller_test.cpp  grid_test.cpp  house_test.cpp  inverter_test.cpp  photovoltaic_panel_test.cpp  storage_test.cpp
test/mocks/: mock_grid.cpp  mock_house.cpp  mock_inverter.cpp  mock_photovoltaic_panel.cpp  mock_storage.cpp
